# nix-rust-build-examples

./: .gitignore  Cargo.nix  Cargo.toml  README.adoc  crate-hashes.json  devenv.nix  devenv.yaml  flake.nix
buildrustpackage-example/: Cargo.toml
crate2nix-example/: Cargo.toml  default.nix
crate2nix-example/src/: main.rs
